k8s/base/bff-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bff-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bff-service
  template:
    metadata:
      labels:
        app: bff-service
    spec:
      containers:
        - name: bff-service
          image: bff-service:local
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: bff-service
spec:
  selector:
    app: bff-service
  ports:
    - port: 8083
      targetPort: 8083
  type: ClusterIP
