k8s/base/category-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: category-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: category-service
  template:
    metadata:
      labels:
        app: category-service
    spec:
      containers:
        - name: category-service
          image: category-service:local
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8085
---
apiVersion: v1
kind: Service
metadata:
  name: category-service
spec:
  selector:
    app: category-service
  ports:
    - port: 8085
      targetPort: 8085
  type: ClusterIP
