k8s/base/review-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: review-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: review-service
  template:
    metadata:
      labels:
        app: review-service
    spec:
      containers:
        - name: review-service
          image: review-service:local
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8086
---
apiVersion: v1
kind: Service
metadata:
  name: review-service
spec:
  selector:
    app: review-service
  ports:
    - port: 8086
      targetPort: 8086
  type: ClusterIP
