k8s/base/stock-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stock-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stock-service
  template:
    metadata:
      labels:
        app: stock-service
    spec:
      containers:
        - name: stock-service
          image: stock-service:local
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8087
---
apiVersion: v1
kind: Service
metadata:
  name: stock-service
spec:
  selector:
    app: stock-service
  ports:
    - port: 8087
      targetPort: 8087
  type: ClusterIP
